@@ -92,7 +92,7 @@ elseif(MSVC)
 endif()
 
 string(TOLOWER ${CMAKE_PROJECT_NAME} BINARY_NAME)
-set(HEIMER_LIB_NAME ${CMAKE_PROJECT_NAME})
+set(HEIMER_LIB_NAME ${CMAKE_PROJECT_NAME}_static) # See GitHub Issue #259
 
 add_definitions(-DAPPLICATION_NAME="${CMAKE_PROJECT_NAME}")
 add_definitions(-DAPPLICATION_VERSION="${APPLICATION_VERSION}")
